[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/config/settings/emulator/EmulatorEditor.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/config/settings/EmulatorSettings.gd" type="Script" id=2]
[ext_resource path="res://scenes/config/settings/AddCustomInfo.tscn" type="PackedScene" id=3]

[node name="EmulatorSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="EmulatorSelection" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 803.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../../ScrollContainer/EmulatorEditor/HFlowContainer/HBoxContainer2/VarButton")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/AddEmulator")
size_flags_horizontal = 3
expand_icon = true

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 807.0
margin_right = 904.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../../ScrollContainer/EmulatorEditor/HFlowContainer/HBoxContainer2/VarButton")
text = "Save changes"

[node name="Discard" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 908.0
margin_right = 1024.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../../ScrollContainer/EmulatorEditor/HFlowContainer/HBoxContainer2/VarButton")
text = "Discard changes"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 44.0

[node name="AddEmulator" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 508.0
margin_right = 659.0
margin_bottom = 20.0
focus_neighbour_bottom = NodePath("../../ScrollContainer/EmulatorEditor/Logo")
size_flags_horizontal = 10
text = "Add custom emulator"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
margin_left = 663.0
margin_right = 667.0
margin_bottom = 20.0

[node name="DefaultOptions" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 671.0
margin_right = 842.0
margin_bottom = 20.0

[node name="RestoreEmulator" type="Button" parent="VBoxContainer/HBoxContainer2/DefaultOptions"]
unique_name_in_owner = true
margin_right = 171.0
margin_bottom = 20.0
focus_neighbour_bottom = NodePath("../../../ScrollContainer/EmulatorEditor/Logo")
text = "Restore default emulator"

[node name="CustomOptions" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 846.0
margin_right = 1024.0
margin_bottom = 20.0

[node name="RemoveEmulator" type="Button" parent="VBoxContainer/HBoxContainer2/CustomOptions"]
margin_right = 178.0
margin_bottom = 20.0
focus_neighbour_bottom = NodePath("../../../ScrollContainer/EmulatorEditor/Logo")
text = "Remove custom emulator"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 52.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="EmulatorEditor" parent="VBoxContainer/ScrollContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 520.0

[node name="Logo" parent="VBoxContainer/ScrollContainer/EmulatorEditor" index="1"]
focus_neighbour_top = NodePath("../../../HBoxContainer2/AddEmulator")

[node name="VarButton" parent="VBoxContainer/ScrollContainer/EmulatorEditor/HFlowContainer/HBoxContainer" index="0"]
focus_neighbour_bottom = NodePath("../../../../../HBoxContainer/EmulatorSelection")

[node name="VarButton" parent="VBoxContainer/ScrollContainer/EmulatorEditor/HFlowContainer/HBoxContainer2" index="0"]
focus_neighbour_bottom = NodePath("../../../../../HBoxContainer/EmulatorSelection")

[node name="AddCustomInfoPopup" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true

[connection signal="visibility_changed" from="." to="." method="_on_EmulatorSettings_visibility_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/EmulatorSelection" to="." method="_on_EmulatorSelection_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save" to="." method="save_changes"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Discard" to="." method="discard_changes"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/AddEmulator" to="." method="_on_AddEmulator_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/DefaultOptions/RestoreEmulator" to="." method="_on_RestoreEmulator_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CustomOptions/RemoveEmulator" to="." method="_on_RemoveEmulator_pressed"]
[connection signal="change_ocurred" from="VBoxContainer/ScrollContainer/EmulatorEditor" to="." method="_on_EmulatorEditor_change_ocurred"]
[connection signal="identifier_picked" from="AddCustomInfoPopup" to="." method="_on_AddCustomInfoPopup_identifier_picked"]

[editable path="VBoxContainer/ScrollContainer/EmulatorEditor"]
